[gd_scene load_steps=5 format=3 uid="uid://digr740ruehlf"]

[ext_resource type="Script" uid="uid://c0mo33biiycuy" path="res://cortar_herbas_2.gd" id="1_vgibj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jeayo"]
bg_color = Color(0.67069, 0.67069, 0.67069, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbu7f"]
size = Vector2(10, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgibj"]
size = Vector2(40, 23)

[node name="CortarHerbas2" type="Node2D"]
script = ExtResource("1_vgibj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 4
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Barra" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jeayo")

[node name="Tixeira" type="ColorRect" parent="VBoxContainer/HBoxContainer/Barra"]
layout_mode = 2
offset_right = 10.0
offset_bottom = 40.0
color = Color(1, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="VBoxContainer/HBoxContainer/Barra/Tixeira"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/HBoxContainer/Barra/Tixeira/Area2D"]
position = Vector2(5, 20)
shape = SubResource("RectangleShape2D_gbu7f")

[node name="HerbaColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Barra"]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 9.0
offset_right = 440.0
offset_bottom = 32.0
color = Color(1, 1, 0, 1)

[node name="Area2D" type="Area2D" parent="VBoxContainer/HBoxContainer/Barra/HerbaColorRect"]
position = Vector2(10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/HBoxContainer/Barra/HerbaColorRect/Area2D"]
position = Vector2(10, 1.5)
shape = SubResource("RectangleShape2D_vgibj")

[node name="Contador" type="Node2D" parent="."]
position = Vector2(136, 379)

[node name="RichTextLabel" type="RichTextLabel" parent="Contador"]
offset_right = 197.0
offset_bottom = 26.0
text = "Herbas cortadas:"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Contador"]
offset_top = 24.0
offset_right = 197.0
offset_bottom = 50.0
text = "Tempo restante:"
fit_content = true

[node name="ContadorHerbasCortadas" type="RichTextLabel" parent="Contador"]
offset_left = 135.0
offset_top = 1.0
offset_right = 175.0
offset_bottom = 41.0
text = "0"

[node name="ContadorTempo" type="RichTextLabel" parent="Contador"]
offset_left = 135.0
offset_top = 25.0
offset_right = 175.0
offset_bottom = 65.0
text = "0"

[node name="TextoFallaches" type="RichTextLabel" parent="Contador"]
visible = false
offset_left = 165.0
offset_top = 25.0
offset_right = 290.0
offset_bottom = 65.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
text = "Fallaches!"

[node name="TextoOk" type="RichTextLabel" parent="Contador"]
visible = false
offset_left = 165.0
offset_top = 1.0
offset_right = 290.0
offset_bottom = 41.0
theme_override_colors/default_color = Color(0, 1, 0, 1)
text = "Ben!"

[node name="GameOverText" type="RichTextLabel" parent="."]
visible = false
z_index = 100
offset_left = 115.0
offset_top = 45.0
offset_right = 1057.0
offset_bottom = 326.0
theme_override_colors/default_color = Color(0, 0.54902, 1, 1)
theme_override_font_sizes/normal_font_size = 100
text = "QUEDACHES SEN TEMPO"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="Segundos" type="Timer" parent="."]
